# chatbot-demo

./: .gitignore  README.md  pyproject.toml
chatbot/: __main__.py  log_config.py
chatbot/chat/: main.py  orchestration.py
chatbot/chat/chroma_db/: chroma.sqlite3
chatbot/extras/init_db/: init_db.py  init_db.sql
chatbot/ingestion/: chunker.py  ingestion.py  main.py
chatbot/ingestion/loaders/: base.py  markdown_loader.py  pdf_loader.py  registry.py  txt_loader.py
chatbot/tools/: base.py  database_search.py  registry.py  vacation.py
chatbot/vector_db/: chroma.py
data/documents/: coding_practices.md  vacation_notice_update.txt
docs/: DECISIONS.md
docs/adr/: 001-framework-vs-llm-provider-sdk.md
tests/chat/orchestration/: test_run_agent_loop.py
tests/ingestion/chunker/: test_chunk_documents.py  test_split_text.py
tests/ingestion/ingestion/: test_ingest.py
tests/ingestion/loaders/markdown_loader/: test_markdown_loader.py
tests/ingestion/loaders/pdf_loader/: test_pdf_loader.py
tests/ingestion/loaders/registry/: test_loader_registry.py
tests/ingestion/loaders/txt_loader/: test_txt_loader.py
tests/tools/base/: test_tool.py
tests/tools/database_search/: test_search_database.py
tests/tools/registry/: test_tool_registry.py
tests/tools/vacation/: conftest.py  init_test_db.sql  test_get_vacation_days.py
tests/vector_db/: test_chroma_db.py
